Made a body style SASS variable in _body.scss and config.json Fixed an unwrapping issue when text was updated in the client

--- a/node/client/sass/_body.scss
+++ b/node/client/sass/_body.scss
@@ -2,7 +2,10 @@ html, body {
   margin: 0;
   padding: 0;
   overflow:hidden;
-  background: $background;
+}
+
+body {
+  @extend %body !optional;
 }
 
 @if $allInOne {
